--- a/CSS/style.css
+++ b/CSS/style.css
@@ -52,8 +52,17 @@ input {
 }
 
 .current-result p {
-  margin-top: 20px;
+  margin-top: 15px;
 
+}
+
+.weather-icon img {
+  width: 50px;
+}
+
+.title {
+  display: flex;
+  flex-direction: row;
 }
 
 .main-container {
@@ -78,7 +87,36 @@ input {
 
 .fiveday-results {
   display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+
 }
 
 .fiveday-results h1 {
+}
+
+
+.fiveday-results .box {
+  background-color: aqua;
+  width: 200px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.fiveday-results .box img {
+  width: 50px;
+}
+
+
+.search-history {
+  display: flex;
+  flex-direction: column;
+}
+
+.search-history button {
+  margin-top: 10px;
+ height: 30px;
 }
