--- a/CSS/style.css
+++ b/CSS/style.css
@@ -34,7 +34,6 @@ input {
 
 .search-button:hover {
   background-color: rgb(7, 103, 248);
-
 }
 
 .search-section h2 {
@@ -43,17 +42,20 @@ input {
 
 .current-result {
   border: 1px solid;
-  background-color: rgb(243, 188, 117);
+  background-color: rgb(255, 255, 255);
   width: 1200px;
   height: 200px;
   padding: 10px;
   margin-top: 10px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border-radius: 10px;
+  border: none;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
 .current-result p {
   margin-top: 15px;
-
 }
 
 .weather-icon img {
@@ -89,27 +91,27 @@ input {
   display: flex;
   justify-content: space-around;
   margin-top: 30px;
-
 }
 
 .fiveday-results h1 {
 }
 
-
 .fiveday-results .box {
-  background-color: aqua;
+  background-color: rgb(255, 255, 255);
   width: 200px;
   height: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-radius: 10px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
-
 
 .fiveday-results .box img {
   width: 50px;
 }
-
 
 .search-history {
   display: flex;
@@ -118,9 +120,13 @@ input {
 
 .search-history button {
   margin-top: 10px;
- height: 30px;
+  height: 30px;
 }
 
 .btn {
-  
+}
+
+.header-fiveday {
+  font-size: 40px;
+  color: rgb(0, 0, 0);
 }
